fix for weird margin on right side on iOS

--- a/css/styles.css
+++ b/css/styles.css
@@ -28,6 +28,15 @@
 
 /*================ body/global =================*/
 
+html,body
+{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
+}
+
 body {
 	background-color: rgb(0, 99, 99);
 }
